# Comet

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  debug.sh  development.md  release.sh
.github/workflows/: ci.yml
app/: Application.h  CMakeLists.txt  main.cpp
editor/: CMakeLists.txt  editor.cpp
editor/src/: imgui_context.cpp  imgui_context.h  menu_bar.cpp  menu_bar.h
editor/src/panels/: console_panel.cpp  console_panel.h  editor_panel.h  hierarchy_panel.cpp  hierarchy_panel.h  inspector_panel.cpp  inspector_panel.h  project_panel.cpp  project_panel.h  view_panel.cpp  view_panel.h  viewport_panel.cpp  viewport_panel.h  world_panel.cpp  world_panel.h
engine/: CMakeLists.txt
engine/assets/: config.yaml
engine/assets/shaders/: CMakeLists.txt  shader.vert
engine/assets/shaders/glsl/: cube.vert  cube_texture.frag  cube_texture.vert
engine/assets/shaders/include/: axis_frag.h  axis_vert.h  cube_frag.h  cube_texture_frag.h  cube_texture_vert.h  cube_vert.h  triangle_frag.h  triangle_vert.h
engine/cmake/: compile_shader.cmake  spv_to_cpp.cmake
engine/src/: pch.h  runtim.cpp
engine/src/common/: config.cpp  config.h  constant.h  enum_convert.cpp  enum_convert.h  enums.h  export.h  flags.h  geometry_utils.cpp  geometry_utils.h  log.cpp  log.h  logger.cpp  logger.h  macro.h  math_core.h  math_utils.h  memory.cpp  memory.h  profiler.cpp  profiler.h  shader_resources.h  singleton.h
engine/src/common/log_system/: log_system.cpp  log_system.h
engine/src/core/: Context.h  engine.cpp  engine.h  math_utils.h  runtim.cpp  runtime.h  timer.cpp  timer.h  window.cpp  window.h
engine/src/core/logger/: logger.cpp  logger.h
engine/src/core/timer/: timer.h
engine/src/core/window/: window.cpp  window.h
engine/src/file/: dialog.cpp  dialog.h  storage.cpp  storage.h
engine/src/graphics/: RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  Swapchain.h  adapter.cpp  adapter.h  attachment.h  binder.cpp  binder.h  buffer.cpp  buffer.h  command_buffer.cpp  command_buffer.h  command_context.cpp  command_context.h  context.cpp  context.h  convert.cpp  convert.h  descriptor_set.cpp  descriptor_set.h  device.cpp  device.h  enums.h  fence.cpp  fence.h  frame_buffer.cpp  frame_buffer.h  image.cpp  image.h  image_view.cpp  image_view.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  render_pass.cpp  render_pass.h  sampler.cpp  (+10 more)
engine/src/render/: frame_manager.cpp  frame_manager.h  material.cpp  material.h  mesh.cpp  mesh.h  render_context.cpp  render_context.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h  resource_manager.cpp  resource_manager.h  scene_renderer.cpp  scene_renderer.h  texture.cpp  texture.h
engine/src/resource/: bind_res.cpp  bind_res.h  buffer_res.cpp  buffer_res.h  image_res.cpp  image_res.h  memory.cpp  memory.h  memory_res.cpp  memory_res.h  refcount.cpp  refcount.h  sampler_res.cpp  sampler_res.h  semaphore_res.cpp  semaphore_res.h  shader_res.cpp  shader_res.h
engine/src/runtime/: application.cpp  application.h  entry.h  runtime.cpp  runtime.h
tests/: CMakeLists.txt  simple_test.cpp  test.cpp  test_config.h  test_utils.h
tests/common/: test_advanced_math.cpp  test_config.cpp  test_export.cpp  test_glfw_initialization.cpp  test_log_system.cpp  test_math_utils.cpp  test_singleton.cpp
tests/core/: test_engine.cpp  test_window.cpp
tests/integration/: test_integration.cpp
tests/performance/: test_math_performance.cpp
